[gd_scene load_steps=39 format=3 uid="uid://cm3mqmlurvlpy"]

[ext_resource type="Script" path="res://scenes/Player.gd" id="1_a3ixs"]
[ext_resource type="Texture2D" uid="uid://b1fihya8y7cmc" path="res://sprites/player-idle-Sheet.png" id="2_ob1w7"]
[ext_resource type="Texture2D" uid="uid://pva454d7nd1h" path="res://sprites/player-jump-Sheet.png" id="3_hn63p"]
[ext_resource type="Texture2D" uid="uid://bhn4t6hlw4okp" path="res://sprites/enemy-situo_version-Sheet.png" id="3_ur57p"]
[ext_resource type="Texture2D" uid="uid://cbgf1ba15khxo" path="res://sprites/player-walk-Sheet.png" id="4_6y7jg"]
[ext_resource type="Texture2D" uid="uid://dx2mw8q5u4fg2" path="res://sprites/player-pain-Sheet.png" id="4_tgurm"]
[ext_resource type="AudioStream" uid="uid://csamsfuupymdh" path="res://sounds/jump.wav" id="7_p6qlv"]
[ext_resource type="AudioStream" uid="uid://c0vkk7u4ejkgg" path="res://sounds/hurt.ogg" id="8_d28f1"]
[ext_resource type="AudioStream" uid="uid://b80cfba2i0tbr" path="res://sounds/shoot.mp3" id="9_4kywm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f6jy5"]
atlas = ExtResource("2_ob1w7")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu3ln"]
atlas = ExtResource("2_ob1w7")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwl4q"]
atlas = ExtResource("2_ob1w7")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt2n4"]
atlas = ExtResource("2_ob1w7")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5ugy"]
atlas = ExtResource("2_ob1w7")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8641m"]
atlas = ExtResource("3_ur57p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qxe8"]
atlas = ExtResource("3_hn63p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3yte"]
atlas = ExtResource("3_hn63p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3e5j"]
atlas = ExtResource("3_hn63p")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf7f6"]
atlas = ExtResource("3_hn63p")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecgw5"]
atlas = ExtResource("3_hn63p")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecv0d"]
atlas = ExtResource("4_tgurm")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kmbg"]
atlas = ExtResource("4_tgurm")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8yud"]
atlas = ExtResource("4_tgurm")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0choc"]
atlas = ExtResource("4_tgurm")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0ri4"]
atlas = ExtResource("4_tgurm")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpvdn"]
atlas = ExtResource("4_6y7jg")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_411h8"]
atlas = ExtResource("4_6y7jg")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_486il"]
atlas = ExtResource("4_6y7jg")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmw1l"]
atlas = ExtResource("4_6y7jg")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv8ck"]
atlas = ExtResource("4_6y7jg")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7rc3"]
atlas = ExtResource("3_ur57p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx1of"]
atlas = ExtResource("3_ur57p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5rpd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6jy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu3ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwl4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt2n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5ugy")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8641m")
}],
"loop": true,
"name": &"idle-skeleton",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qxe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3yte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3e5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf7f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecgw5")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecv0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kmbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8yud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0choc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0ri4")
}],
"loop": false,
"name": &"pain",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpvdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_411h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_486il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmw1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv8ck")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7rc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx1of")
}],
"loop": true,
"name": &"run-skeleton",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xjs28"]
radius = 7.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_dbq75"]
length = 14.1576

[sub_resource type="Animation" id="Animation_5j2tc"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"jump"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"die_emit"
}, {
"args": [],
"method": &"born_emit"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TreadEnemy/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_krqdr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TreadEnemy/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_63c85"]
_data = {
"RESET": SubResource("Animation_krqdr"),
"dead": SubResource("Animation_5j2tc")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 130
script = ExtResource("1_a3ixs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c5rpd")
animation = &"pain"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_xjs28")

[node name="LeftBulletStart" type="Marker2D" parent="."]
position = Vector2(-9, 0)

[node name="RightBulletStart" type="Marker2D" parent="."]
position = Vector2(7, 0)

[node name="Bullet_flash_timer" type="Timer" parent="."]
autostart = true

[node name="ShootGapTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="TreadEnemy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreadEnemy"]
position = Vector2(-1, -2)
scale = Vector2(1.84822, 0.988869)
shape = SubResource("SeparationRayShape2D_dbq75")

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_p6qlv")
bus = &"JumpEFX"

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_d28f1")
bus = &"Sounds"

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4kywm")
bus = &"Sounds"

[node name="DeadGap" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_63c85")
}

[connection signal="born" from="." to="." method="_on_born"]
[connection signal="timeout" from="Bullet_flash_timer" to="." method="_on_bullet_flash_timer_timeout"]
[connection signal="timeout" from="ShootGapTimer" to="." method="_on_shoot_gap_timer_timeout"]
[connection signal="body_entered" from="TreadEnemy" to="." method="_on_tread_enemy_body_entered"]
